--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest",
     "scss-watch": "sass --watch styling/main.scss static/main.css",
     "dev": "concurrently \"npm run scss-watch\" \"nodemon server\""
-
   },
   "devDependencies": {
+    "concurrently": "^9.1.2",
     "cross-env": "^7.0.3",
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
