--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "^4.21.2",
     "express-ejs-layouts": "^2.5.1",
     "gray-matter": "^4.0.3",
+    "jsonwebtoken": "^9.0.2",
     "markdown-it": "^14.1.0",
     "sass": "^1.83.4"
   }
