--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "supertest": "^7.0.0"
   },
   "dependencies": {
+    "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-ejs-layouts": "^2.5.1",
