--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "author": "MagnusTerak",
   "type": "module",
   "main": "server.js",
+
+  
   "scripts": {
     "start": "node server",
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest",
@@ -21,10 +23,16 @@
     "scss-watch": "sass --watch styling/main.scss static/main.css",
     "dev": "concurrently \"npm run scss-watch\" \"nodemon server\""
   },
+
+  "jest": {
+    "testEnvironment": "jsdom"
+  },
+
   "devDependencies": {
     "concurrently": "^9.1.2",
     "cross-env": "^7.0.3",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "nodemon": "^3.1.9",
     "supertest": "^7.0.0"
   },
@@ -40,4 +48,5 @@
     "sanitize-html": "^2.14.0",
     "sass": "^1.83.4"
   }
+
 }
